Tue Feb  9 15:24:05 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * MPC/config/dcps_monitor.mpb:
        * tools/odds_monitor/Monitor.mpc:

          Added a new base project for including the monitor library.
          Thanks to Adam Mitz for helping me understand Johnny's original
          suggestion.

Tue Feb  9 15:02:53 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/Monitor.mpc:

          Make the project build after the OpenDDS_monitor project it
          depends on.  Thanks to Johnny Willemsen for this correction.

Tue Feb  9 13:08:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
          Initialise a pointer with 0

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
          Fix invalid logging mask

Tue Feb  9 04:38:49 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Debugged statistics collecting.

        * performance-tests/Bench/tests/thru/test-commands.txt:

          Added statistics gathering argument to p2 command lines.

Mon Feb  8 18:03:34 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Added script PID to system statistics output file.  This will
          allow statistics to be gathered in a loopback test without
          conflicts.
          Corrected a documentation issue.

        * performance-tests/Bench/tests/thru/p1-be-*.ini:

          Updated Topics to be BEST_EFFORT.  This was preventing
          associations on the return trip from being made.

Mon Feb  8 16:17:24 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.h:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:

          Updated ast_visitor interface for upcoming DOC x.7.7 release.

Mon Feb  8 15:32:31 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
