@@ -1,3 +1,11 @@
+Tue Feb  9 16:58:50 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * java/build_scripts/jms_scoreboard.pl:
+
+          If ant returns non-zero and at least one test has failed,
+          don't output an additional line that will be flagged as an error
+          by the scoreboard parser.
+
 Tue Feb  9 15:24:05 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
         * MPC/config/dcps_monitor.mpb:
